<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/operation_Label"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:text="@string/operation_value"
        android:textSize="24sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/op_value"
        android:textSize="20sp"
        android:layout_marginLeft="0dp"
        android:layout_below="@+id/operation_Label"
        android:layout_alignParentStart="true"
        android:inputType="numberDecimal" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/income"
        android:id="@+id/toLabel"
        android:layout_below="@+id/op_value"
        android:layout_alignParentStart="true"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/categories"
        android:spinnerMode="dropdown"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toLabel" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/op_descLabel"
        android:layout_gravity="center_horizontal"
        android:text="@string/operation_desc"
        android:textSize="24sp"
        android:layout_below="@+id/categories"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/op_desc"
        android:textSize="20sp"
        android:layout_marginLeft="0dp"
        android:layout_below="@+id/op_descLabel"
        android:layout_alignParentStart="true" />


</RelativeLayout>