<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Account"
        android:textSize="36px"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="5dp"
        android:layout_alignParentEnd="false" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$ 0.0"
        android:textSize="48px"
        android:layout_alignBottom="@+id/description"
        android:layout_toStartOf="@+id/deleteButton"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description"
        android:textSize="28px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/account"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deleteButton"
        android:src="@android:drawable/ic_menu_delete"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/description"
        android:layout_alignParentTop="true"
        android:clickable="true" />

</RelativeLayout>