...
        android:text="@string/account_name"
        android:textSize="24sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_below="@+id/nameLabel"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
...
