...
        android:layout_marginRight="5dp"
        android:layout_below="@+id/from"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/to" />

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$ 0.0"
        android:textSize="38px"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
...
